--- a/package.json
+++ b/package.json
@@ -7,32 +7,43 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "email": "email dev --dir src/emails "
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-data-grid-generator": "^8.1.0",
+    "@react-email/components": "0.0.38",
     "@react-oauth/google": "^0.12.1",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
     "@toolpad/core": "^0.14.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "contentful": "^11.5.18",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "nanoid": "^5.1.5",
-    "react": "^19.0.0",
+    "react": "19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
+    "react-cookie": "^8.0.1",
     "react-date-range": "^2.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-slick": "^0.30.3",
+    "resend": "^4.5.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -43,6 +54,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "react-email": "4.0.11",
     "vite": "^6.3.1"
   }
 }
