--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "resend": "^4.5.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.17",
