--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "email": "email dev --dir src/emails "
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.4.2",
+    "@chakra-ui/react": "^2.10.7",
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
+    "@mui/material": "^7.1.0",
     "@mui/x-data-grid-generator": "^8.1.0",
     "@react-email/components": "0.0.38",
     "@react-oauth/google": "^0.12.1",
+    "@saas-ui/react": "^2.11.4",
+    "@saas-ui/sidebar": "^0.9.2",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
     "@toolpad/core": "^0.14.0",
@@ -28,6 +32,7 @@
     "contentful": "^11.5.18",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "framer-motion": "^6.5.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "nanoid": "^5.1.5",
