--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.1.0",
     "@mui/x-data-grid-generator": "^8.1.0",
-    "@react-email/components": "0.0.38",
+    "@react-email/components": "^0.0.38",
     "@react-oauth/google": "^0.12.1",
     "@saas-ui/react": "^2.11.4",
     "@saas-ui/sidebar": "^0.9.2",
