--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^7.1.0",
     "@mui/x-data-grid-generator": "^8.1.0",
     "@react-email/components": "^0.0.38",
+    "@react-email/render": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
     "@saas-ui/react": "^2.11.4",
     "@saas-ui/sidebar": "^0.9.2",
@@ -60,7 +61,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "react-email": "4.0.11",
+    "react-email": "^4.0.11",
     "vite": "^6.3.1"
   }
 }
